--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "main": "src/main.js",
   "dependencies": {
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-demi": "^0.6.0"
   },
   "devDependencies": {
     "@ianaya89/vue-cli-plugin-tailwind": "~1.1.0",
